# nRF52840-HomeSecurity

./: CMakeLists.txt  CMakePresets.json  README.md  buzzer.overlay  led.overlay  pir.overlay  prj.conf  servo.overlay
dts/bindings/: pwm-servo.yaml
src/: main.c
src/ble_uart/: CMakeLists.txt  ble_uart.c
src/btn/: CMakeLists.txt  asm.c  btn.c  btn.h
src/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
src/led/: CMakeLists.txt  led.c  led.h
src/nfc/: CMakeLists.txt  nfc.c
src/pir/: CMakeLists.txt  pir.c  pir.h
src/servo/: CMakeLists.txt  servo.c  servo.h
